[6490] Remove proxy and fix idempotency in ubuntu features, doc changed